%%{init: {'theme': 'base', 'themeVariables': {'background': '#ffffff', 'primaryColor': '#eef6ff', 'primaryTextColor': '#172033', 'primaryBorderColor': '#2b6cb0', 'lineColor': '#4a5568', 'secondaryColor': '#f7fafc', 'tertiaryColor': '#ffffff'}}}%%
erDiagram
    PATIENTS {
        NUMBER patient_id PK
        VARCHAR2 full_name
        VARCHAR2 email UK
        VARCHAR2 phone
        DATE registration_date
        VARCHAR2 patient_status
    }
    PATIENT_PROFILES {
        NUMBER patient_id PK,FK
        VARCHAR2 preferred_name
        VARCHAR2 contact_preference
        VARCHAR2 locality
        VARCHAR2 emergency_contact_type
    }
    DEPARTMENTS {
        NUMBER department_id PK
        VARCHAR2 department_name UK
        NUMBER consultation_rate
        VARCHAR2 department_status
    }
    DOCTORS {
        NUMBER doctor_id PK
        NUMBER department_id FK
        VARCHAR2 full_name
        VARCHAR2 professional_code UK
        VARCHAR2 doctor_status
    }
    APPOINTMENTS {
        NUMBER appointment_id PK
        NUMBER patient_id FK
        NUMBER doctor_id FK "nullable"
        DATE appointment_at
        VARCHAR2 appointment_status
        VARCHAR2 visit_note
    }
    MEDICATIONS {
        NUMBER medication_id PK
        VARCHAR2 medication_name UK
        VARCHAR2 form_name
        NUMBER list_unit_rate
        VARCHAR2 catalog_status
    }
    PRESCRIPTIONS {
        NUMBER prescription_id PK
        NUMBER appointment_id FK
        DATE prescribed_on
        VARCHAR2 prescription_status
        VARCHAR2 clinician_note
    }
    PRESCRIPTION_ITEMS {
        NUMBER prescription_id PK,FK
        NUMBER medication_id PK,FK
        NUMBER quantity
        NUMBER unit_rate
    }
    INVOICES {
        NUMBER invoice_id PK
        NUMBER appointment_id FK,UK
        DATE issued_on
        DATE due_on
        VARCHAR2 invoice_status
    }
    PAYMENTS {
        NUMBER payment_id PK
        NUMBER invoice_id FK
        DATE paid_on
        NUMBER amount
        VARCHAR2 payment_method
        VARCHAR2 payment_reference UK
    }

    PATIENTS ||--o| PATIENT_PROFILES : "has optional profile"
    PATIENTS ||--o{ APPOINTMENTS : "books"
    DEPARTMENTS ||--o{ DOCTORS : "contains"
    DOCTORS o|--o{ APPOINTMENTS : "is assigned to"
    APPOINTMENTS ||--o{ PRESCRIPTIONS : "documents"
    PRESCRIPTIONS ||--o{ PRESCRIPTION_ITEMS : "contains"
    MEDICATIONS ||--o{ PRESCRIPTION_ITEMS : "appears in"
    APPOINTMENTS ||--o| INVOICES : "may create"
    INVOICES ||--o{ PAYMENTS : "receives"
